--- a/manifest.json
+++ b/manifest.json
@@ -13,5 +13,10 @@
       "js": ["content.js"]
     }
   ],
-  "web_accessible_resources": ["resume.html"]
+  "web_accessible_resources": [
+    {
+      "resources": ["resume.html"],
+      "matches": ["<all_urls>"]
+    }
+  ]
 }
